# static

./: .vimrc  README.md  build  clean  cpp-format  run-all  setup  vim-copy
abc/: CMakeLists.txt  backup
abc/gmsh/: build  ppc.geo  shell.geo
abc/include/: exact_solution.hpp  settings.hpp  solver.hpp
abc/src/: exact_solution.cpp  main.cpp  solver.cpp  static_scalar_input.cpp
cbnd/: .vimrc  CMakeLists.txt  backup
cbnd/gmsh/: build  ring.geo  shell.geo
cbnd/include/: exact_solution.hpp  settings.hpp  solver.hpp
cbnd/src/: exact_solution.cpp  main.cpp  solver.cpp  static_scalar_input.cpp
cvp-i/: .vimrc  CMakeLists.txt  backup
cvp-i/gmsh/: build  sphere-r.geo  sphere-s.geo  sphere.geo
cvp-i/include/: exact_solution.hpp  settings.hpp  solver.hpp
cvp-i/src/: exact_solution.cpp  main.cpp  solver.cpp  static_vector_input.cpp
cvp-ii/: CMakeLists.txt  backup
cvp-ii/gmsh/: build  circle.geo
cvp-ii/include/: exact_solution.hpp  settings.hpp  solver.hpp
cvp-ii/src/: exact_solution.cpp  main.cpp  solver.cpp  static_scalar_input.cpp
doc/: CHANGELOG.txt
flc/: CMakeLists.txt  backup
flc-axi/: CMakeLists.txt  backup
flc-axi/gmsh/: build  cylinder.geo  sphere.geo
flc-axi/include/: exact_solution.hpp  settings.hpp  solver.hpp
flc-axi/src/: exact_solution.cpp  main.cpp  solver.cpp  static_scalar_input.cpp
flc/gmsh/: build  ring.geo  shell.geo
flc/include/: exact_solution.hpp  settings.hpp  solver.hpp
flc/src/: exact_solution.cpp  main.cpp  solver.cpp  static_scalar_input.cpp
int/: CMakeLists.txt  backup
int-axi/: CMakeLists.txt  backup
int-axi/gdb/: commands1.gdb
int-axi/gmsh/: build  cylinder.geo  sphere.geo
int-axi/include/: exact_solution.hpp  settings.hpp  solver.hpp
int-axi/src/: exact_solution.cpp  main.cpp  static_scalar_input.cpp
int/gdb/: create_mass_matrix.gdb  do_project.gdb  mass_assembler.gdb
int/gmsh/: build  ring.geo  shell.geo
int/include/: exact_solution.hpp  settings.hpp  solver.hpp
int/src/: exact_solution.cpp  main.cpp  solver.cpp  static_scalar_input.cpp
mms/: .vimrc  CMakeLists.txt  backup
mms-axi/: CMakeLists.txt  backup
mms-axi/gmsh/: build  cylinder_2d.geo  cylinder_3d.geo
mms-axi/include/: exact_solution.hpp  settings.hpp  solver.hpp
mms-axi/src/: exact_solution.cpp  main.cpp  solver.cpp  static_scalar_input.cpp
mms-v/: CMakeLists.txt  backup
mms-v/gmsh/: build  circle.geo  cube_rotate.geo  cube_simple.geo  cube_symmetry.geo  cube_translate.geo  sphere.geo
mms-v/include/: exact_solution.hpp  settings.hpp  solver.hpp
mms-v/src/: exact_solution.cpp  main.cpp  static_vector_input.cpp
mms-vt-i/: CMakeLists.txt  backup
mms-vt-i/gmsh/: build  cube.geo  sphere.geo
mms-vt-i/include/: exact_solution.hpp  settings.hpp  solver.hpp
mms-vt-i/src/: exact_solution.cpp  main.cpp  solver.cpp  static_vector_input.cpp
mms-vt-ii/: CMakeLists.txt  backup
mms-vt-ii/gmsh/: build  circle.geo  square.geo
mms-vt-ii/include/: exact_solution.hpp  settings.hpp  solver.hpp
mms-vt-ii/src/: exact_solution.cpp  main.cpp  solver.cpp  static_scalar_input.cpp  static_vector_input.cpp
mms/gmsh/: circle.geo  square.geo
mms/include/: exact_solution.hpp  settings.hpp  solver.hpp
mms/src/: exact_solution.cpp  main.cpp  solver.cpp  static_scalar_input.cpp
mwr/: CMakeLists.txt  backup
mwr/gmsh/: build  circle.geo
mwr/include/: exact_solution.hpp  settings.hpp  solver.hpp
mwr/src/: exact_solution.cpp  main.cpp  solver.cpp  static_scalar_input.cpp
pls/: CMakeLists.txt  backup
pls/gmsh/: build  cube.geo  square.geo
pls/include/: exact_solution.hpp  settings.hpp  solver.hpp
pls/src/: exact_solution.cpp  main.cpp  solver.cpp  static_scalar_input.cpp
rho/: CMakeLists.txt  backup
rho-axi/: CMakeLists.txt  backup
rho-axi/gmsh/: build  cylinder.geo  sphere.geo
rho-axi/include/: exact_solution.hpp  settings.hpp  solver.hpp
rho-axi/src/: exact_solution.cpp  main.cpp  solver.cpp  static_scalar_input.cpp
rho/gmsh/: circle.geo  sphere.geo
rho/include/: exact_solution.hpp  settings.hpp  solver.hpp
rho/src/: exact_solution.cpp  main.cpp  solver.cpp  static_scalar_input.cpp
sch/: CMakeLists.txt  backup
sch-axi/: CMakeLists.txt  backup
sch-axi/gmsh/: cylinder.geo  sphere.geo
sch-axi/include/: exact_solution.hpp  settings.hpp  solver.hpp
sch-axi/src/: exact_solution.cpp  main.cpp  solver.cpp  static_scalar_input.cpp
sch/gmsh/: build  sphere.geo
sch/include/: exact_solution.hpp  settings.hpp  solver.hpp
sch/src/: exact_solution.cpp  main.cpp  solver.cpp  static_scalar_input.cpp
shared/: .vimrc  COPYING.LESSER  Copyright.hpp
shared/include/: constants.hpp  misc.hpp  (+23 more)
sld-i/: CMakeLists.txt  backup
sld-ii/: CMakeLists.txt  backup
ssol-i/: CMakeLists.txt  backup
ssol-i-axi/: CMakeLists.txt  backup
ssol-ii/: CMakeLists.txt  backup
ssol-ii-axi/: CMakeLists.txt  backup
ssol-iii/: CMakeLists.txt  backup
ssol-iii-axi/: CMakeLists.txt  backup
(+82 files in other folders)
